docs/Grammar.ebnf
(* ======================================================================
   HambaLang v6 — Grammar terpadu
   Diimplementasikan oleh hambalang/parser.py. Semua dialek historis
   (v2 klasik, advanced v3, formal v5) diterima oleh grammar yang sama.

   Konvensi:
     NL        = newline atau ';'  (newline di dalam ( ) dan [ ] diabaikan)
     "kata"    = kata kunci
     ADJ "("   = '(' yang menempel tanpa spasi pada token sebelumnya
   ====================================================================== *)

program         = { NL } , { statement } ;

block(end)      = { statement } , end ;          (* end tidak termasuk body *)
brace_block     = { NL } , "{" , { statement } , "}" ;

statement       = { NL } , ( simple_stmt | compound_stmt ) ;

(* ---------------------------------------------------------- simple *)

simple_stmt     = ( print_stmt | assign_stmt | expr_stmt | return_stmt
                  | "hentikan" | "lanjut" | raise_stmt | input_stmt
                  | global_stmt | wacana_stmt | "selesai" ) , NL ;

print_stmt      = ( "lapor" | "print" ) , [ expression ]
                | "Korupsi" , expression ;       (* dialek v5: tanpa '(' menempel *)

assign_stmt     = [ "set" | "Anggaran" ] , target , assign_op , expression ;
assign_op       = "=" | "+=" | "-=" | "*=" | "/=" | "%=" ;
target          = IDENT , { "[" , expression , "]" | "." , IDENT } ;

expr_stmt       = expression ;                   (* mis. Korupsi(20), f(x) *)
return_stmt     = "kembalikan" , [ expression ] ;
raise_stmt      = "Mangkrak" , [ expression ] ;  (* tanpa '(' menempel *)
input_stmt      = "Tagih" , IDENT , [ "," , expression ] ;
global_stmt     = "global" , IDENT , { "," , IDENT } ;
wacana_stmt     = "Wacana" , [ expression ] ;    (* komentar resmi, tidak dieksekusi *)

(* --------------------------------------------------------- compound *)

compound_stmt   = if_stmt | sita_stmt | while_stmt | proyek_stmt | for_stmt
                | repeat_stmt | program_block | func_def | bagirata_def
                | proc_def | scope_block | try_stmt ;

if_stmt         = "jika" , expression , "maka" , simple_stmt          (* inline *)
                | "jika" , expression , [ "maka" ] , NL ,
                  block( "ataujika" | "atau" | "akhir" ) ,
                  { ( "ataujika" | "atau" "jika" ) , expression , [ "maka" ] , NL ,
                    block( "ataujika" | "atau" | "akhir" ) } ,
                  [ "atau" , NL , block( "akhir" ) ] ,
                  "akhir" , NL ;

sita_stmt       = "Sita" , expression , brace_block ,
                  { "Pengadilan" , "Sita" , expression , brace_block } ,
                  [ "Pengadilan" , brace_block ] , NL ;

while_stmt      = "selama" , expression , NL , block( "akhir" ) , "akhir" , NL ;
proyek_stmt     = "Proyek" , expression , brace_block , NL ;

for_stmt        = "untuk" , IDENT ,
                  ( "dari" , expression , "sampai" , expression , [ "langkah" , expression ]
                  | "dalam" , expression ) ,
                  NL , block( "akhir" ) , "akhir" , NL ;

repeat_stmt     = "Rapat" , ADJ "(" , expression , ")" , NL ,
                  block( "selesaiRapat" | "akhir" ) , ( "selesaiRapat" | "akhir" ) , NL ;
program_block   = "Rapat" , NL , block( "Bubarkan" ) , "Bubarkan" , NL ;

params          = "(" , [ IDENT , { "," , IDENT } ] , ")" ;
func_def        = "fungsi" , IDENT , params , NL , block( "akhir" ) , "akhir" , NL ;
bagirata_def    = "BagiRata" , IDENT , params , brace_block , NL ;
proc_def        = "prosedur" , IDENT , [ params ] , NL ,
                  block( "akhirProsedur" | "akhir" ) , ( "akhirProsedur" | "akhir" ) , NL ;

scope_block     = "mulai" , NL , block( "akhir" ) , "akhir" , NL ;

try_stmt        = "coba" , NL , block( "jikaGagal" ) ,
                  "jikaGagal" , [ IDENT ] , NL ,
                  block( "akhirCoba" | "akhir" ) , ( "akhirCoba" | "akhir" ) , NL ;

(* ------------------------------------------------------ expressions *)
(* Dari prioritas terendah ke tertinggi. *)

expression      = or_expr ;
or_expr         = and_expr , { ( "atau" | "ATAU" ) , and_expr } ;
and_expr        = not_expr , { ( "dan" | "DAN" ) , not_expr } ;
not_expr        = ( "bukan" | "BUKAN" ) , not_expr | comparison ;
comparison      = additive , { ( "==" | "!=" | "<" | ">" | "<=" | ">=" ) , additive } ;
additive        = multiplicative , { ( "+" | "-" ) , multiplicative } ;
multiplicative  = unary , { ( "*" | "/" | "%" ) , unary } ;
unary           = ( "-" | "+" | "!" ) , unary | power ;
power           = postfix , [ "**" , unary ] ;            (* asosiatif kanan *)
postfix         = primary , { "(" , [ args ] , ")" | "[" , expression , "]" | "." , IDENT } ;
args            = expression , { "," , expression } , [ "," ] ;

primary         = NUMBER | STRING
                | "benar" | "BENAR" | "salah" | "SALAH" | "kosong" | "KOSONG"
                | IDENT
                | "Janji" , IDENT                          (* harus diikuti '(' *)
                | "(" , expression , ")"
                | "[" , [ args ] , "]"
                | "{" , [ pair , { "," , pair } , [ "," ] ] , "}" ;
pair            = ( IDENT | expression ) , ":" , expression ;

(* ---------------------------------------------------------- lexical *)

IDENT           = ( letter | "_" ) , { letter | digit | "_" } ;   (* bukan kata kunci *)
NUMBER          = digit , { digit | "_" } , [ "." , digit , { digit | "_" } ] ,
                  [ ( "e" | "E" ) , [ "+" | "-" ] , digit , { digit } ] ;
STRING          = '"' , { char | escape } , '"' | "'" , { char | escape } , "'" ;
escape          = "\" , ( "n" | "t" | "r" | "0" | "\" | '"' | "'" ) ;
comment         = "//" , { any } | "#" , { any } | "/*" , { any } , "*/" ;
